add login directive to page

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 	</head>
 	<body ng-app="myApp" ng-controller='mainCtrl'>
 	
+		<login></login>
+
 		<!-- inject:jsVendor -->
 		<!-- endinject -->
 		<!-- inject:js -->
