put login controller in separate file

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Dashboard</title>
+		<title>Message</title>
 		<!-- bower:css -->
 		<!-- endbower -->
 		<!-- inject:cssVendors -->
