feat: add message directive and controller

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,11 @@
 		<!-- endinject -->
 	</head>
 	<body ng-app="myApp" ng-controller='mainCtrl'>
-	
-		<login></login>
+		<div class="container">
+			
+			<login></login>
+			<message></message>
+		</div>
 
 		<!-- inject:jsVendor -->
 		<!-- endinject -->
