feat: change classes to align with materialized css

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 	</head>
 	<body ng-app="myApp" ng-controller='mainCtrl'>
 		<div class="container">
-			
+			<h3>Login</h3>
 			<login></login>
+			<h3>Messages</h3>
 			<message></message>
 		</div>
-
 		<!-- inject:jsVendor -->
 		<!-- endinject -->
 		<!-- inject:js -->
