feat: add register

--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,6 @@
 		<!-- inject:js -->
 		<script src="/src/app/main.js"></script>
 		<!-- endinject -->
+		<script src="/src/app/end.js"></script>
 	</body>
 </html>
