--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,15 @@
 		<!-- endinject -->
 	</head>
 	<body ng-app="myApp" ng-controller='mainCtrl'>
-	<div class="row">
+	<div class="container">
     <div class="col s12">
       <ul class="tabs">
-        <li class="tab col s3"><a href="#login">Login</a></li>
-        <li class="tab col s3"><a class="active" href="#contacts">Contacts</a></li>
-        <li class="tab col s3"><a href="#messages">Messages</a></li>
+        <li class="tab col s3" ng-class='{"disabled": auth.status.isLoggedIn}'>
+          <a id='tab_login' class="active" href="#login">Login</a></li>
+        <li class="tab col s3" ng-class='{"disabled": !auth.status.isLoggedIn}'>
+          <a id='tab_contacts' href="#contacts">Contacts</a></li>
+        <li class="tab col s3" ng-class='{"disabled": !auth.status.isLoggedIn}'>
+          <a href="#messages">Messages</a></li>
       </ul>
     </div>
     <div id="login" class="col s12">
@@ -24,7 +27,9 @@
         <login></login>
       </div>
     </div>
-    <div id="contacts" class="col s12"></div>
+    <div id="contacts" class="col s12">
+      <contact></contact>
+    </div>
     <div id="messages" class="col s12">
       <div class="container">
         <message></message>
