--- a/src/index.html
+++ b/src/index.html
@@ -11,32 +11,27 @@
 		<!-- endinject -->
 	</head>
 	<body ng-app="myApp" ng-controller='mainCtrl'>
-	<div class="container">
-    <div class="col s12">
-      <ul class="tabs">
-        <li class="tab col s3" ng-class='{"disabled": auth.status.isLoggedIn}'>
-          <a id='tab_login' class="active" href="#login">Login</a></li>
-        <li class="tab col s3" ng-class='{"disabled": !auth.status.isLoggedIn}'>
-          <a id='tab_contacts' href="#contacts">Contacts</a></li>
-        <li class="tab col s3" ng-class='{"disabled": !auth.status.isLoggedIn}'>
-          <a href="#messages">Messages</a></li>
-      </ul>
+    <div ng-cloak>
+      <md-content>
+        <md-tabs md-dynamic-height md-border-bottom>
+        <md-tab label="Login">
+          <md-content class="md-padding">
+            <login></login>
+          </md-content>
+        </md-tab>
+        <md-tab label="Contacts">
+          <md-content class="md-padding">
+            <contact></contact>
+          </md-content>
+        </md-tab>
+        <md-tab label="Messages">
+          <md-content class="md-padding">
+            <message></message>
+          </md-content>
+        </md-tab>
+      </md-tabs>
+      </md-content>
     </div>
-    <div id="login" class="col s12">
-      <div class="container">
-        <login></login>
-      </div>
-    </div>
-    <div id="contacts" class="col s12">
-      <contact></contact>
-    </div>
-    <div id="messages" class="col s12">
-      <div class="container">
-        <message></message>
-      </div>
-    </div>
-  </div>
-
 		<!-- inject:jsVendor -->
 		<!-- endinject -->
 		<!-- inject:js -->
