switch theme color

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<body ng-app="myApp" ng-controller='mainCtrl'>
     <div ng-cloak>
       <md-content>
-        <md-tabs md-dynamic-height md-border-bottom>
+        <md-tabs class="md-accent" md-dynamic-height md-border-bottom>
         <md-tab ng-disabled='auth.status.isLoggedIn' label="Login">
           <md-content class="md-padding">
             <login></login>
