--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Message</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!-- bower:css -->
 		<!-- endbower -->
 		<!-- inject:cssVendors -->
