--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
       </md-content>
     </div>
     <div ng-cloak ng-show='page.sendmessage'>
-      <md-content class="md-padding">
+      <md-content>
         <sendmessage></sendmessage>
       </md-content>
     </div>
