--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           Go Back
         </md-button>
         <h2>
-          <span>Bored - Messages</span>
+          <span>{{page.page.title || "Bored"}}</span>
         </h2>
       </div>
     </md-toolbar>
