feat: can be added to homescreen. Images still missing

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Add to home screen for Safari on iOS and Windows -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Bored">
+    <meta name="msapplication-TileImage" content="assets/images/icons/icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#2F3BA2">
+
+    <link rel="apple-touch-icon" href="assets/images/icons/icon-152x152.png">
+    <link rel="manifest" href="/manifest.json">
 		<title>Message</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!-- bower:css -->
