--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 		<!-- endinject -->
 	</head>
 	<body ng-app="myApp" ng-controller='mainCtrl'>
+  <div id="toaster"></div>
     <md-toolbar class='md-accent bleh' ng-if="true" ng-cloak>
       <div class="md-toolbar-tools" ng-cloak>
         <md-button ng-show='(page.page.name == "SendMessage")' ng-click='page.setPage({name: "login"});' aria-label="Go Back">
